force-app/main/default/objects/Question__c/fields/Detail_Objective__c.field-meta.xml
<CustomField>
    <fullName>Detail_Objective__c</fullName>
    <label>Detail Objective</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Objective__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>OptionA</fullName>
                <label>Given a scenario, identify the boundaries of declarative customization and the use cases for programmatic customization.</label>
            </value>
            <value>
                <fullName>OptionB</fullName>
                <label>Identify common scenarios for extending an org using the AppExchange.</label>
            </value>
            <value>
                <fullName>OptionC</fullName>
                <label>Apply features and capabilities available to restrict and extend object, record, and field access.</label>
            </value>
            <value>
                <fullName>OptionD</fullName>
                <label>Given a set of business requirements, determine the appropriate sharing solution.</label>
            </value>
            <value>
                <fullName>OptionE</fullName>
                <label>Identify the features and capabilities available when creating reports, report types, and dashboards.</label>
            </value>
            <value>
                <fullName>OptionF</fullName>
                <label>Given a set of requirements, determine the appropriate global, object-specific actions and layouts to optimize the Salesforce mobile user experience.</label>
            </value>
            <value>
                <fullName>OptionG</fullName>
                <label>Describe the customizations and use cases for Chatter.</label>
            </value>
            <value>
                <fullName>OptionH</fullName>
                <label>Given a scenario, determine the appropriate data model.</label>
            </value>
            <value>
                <fullName>OptionI</fullName>
                <label>Given a scenario, explain the capabilities of the various relationship types and the implications of each on record access, user interface, and reporting.</label>
            </value>
            <value>
                <fullName>OptionJ</fullName>
                <label>Given a scenario, determine the considerations when selecting or changing a field data type.</label>
            </value>
            <value>
                <fullName>OptionK</fullName>
                <label>Explain the capabilities and considerations of the schema builder.</label>
            </value>
            <value>
                <fullName>OptionL</fullName>
                <label>Given a scenario, determine the options and considerations when importing and exporting data, including the capabilities of external data sources.</label>
            </value>
            <value>
                <fullName>OptionM</fullName>
                <label>Given a scenario, demonstrate the use of formula fields to meet stated business requirements.</label>
            </value>
            <value>
                <fullName>OptionN</fullName>
                <label>Given a scenario, determine the capabilities, use cases, and implications of roll-up summary fields.</label>
            </value>
            <value>
                <fullName>OptionO</fullName>
                <label>Given a scenario, demonstrate the use of validation rules to meet stated business requirements.</label>
            </value>
            <value>
                <fullName>OptionP</fullName>
                <label>Given a scenario, determine the capabilities and use cases for approval processes.</label>
            </value>
            <value>
                <fullName>OptionQ</fullName>
                <label>Given a scenario, determine the capabilities and use cases for workflow, Flow, and Process Builder.</label>
            </value>
            <value>
                <fullName>OptionR</fullName>
                <label>Given a set of business requirements, recommend a solution to automate business processes while avoiding errors in automation.</label>
            </value>
            <value>
                <fullName>OptionS</fullName>
                <label>Describe the user interface customization options.</label>
            </value>
            <value>
                <fullName>OptionT</fullName>
                <label>Demonstrate the capabilities and use cases for custom buttons, links, and actions.</label>
            </value>
            <value>
                <fullName>OptionU</fullName>
                <label>Given a scenario, determine the declarative options available for incorporating Lightning Components in an application.</label>
            </value>
            <value>
                <fullName>OptionV</fullName>
                <label>Describe the programmatic customizations available for incorporating custom Lightning Components in an application.</label>
            </value>
            <value>
                <fullName>OptionW</fullName>
                <label>Given a set of business requirements, recommend a solution for key milestones and considerations when managing the application lifecycle and various types of Sandboxes.</label>
            </value>
            <value>
                <fullName>OptionX</fullName>
                <label>Given a use case, demonstrate knowledge, viability, and troubleshooting when using change sets.</label>
            </value>
            <value>
                <fullName>OptionY</fullName>
                <label>Describe the use cases and considerations when using unmanaged and managed packages.</label>
            </value>
            <value>
                <fullName>OptionZ</fullName>
                <label>Given a scenario, determine the appropriate deployment plan.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>