force-app/main/default/objects/Question__c/fields/Mistake__c.field-meta.xml
<CustomField>
    <fullName>Mistake__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mistake</label>
    <type>Checkbox</type>
</CustomField>