force-app/main/default/objects/Question__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <defaultValue>&quot;Salesforce Fundamentals: 23%&quot;</defaultValue>
    <label>Objective</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SalesforceFundamentals</fullName>
                <label>Salesforce Fundamentals: 23%</label>
            </value>
            <value>
                <fullName>DataModelingandManagement</fullName>
                <label>Data Modeling and Management: 22%</label>
            </value>
            <value>
                <fullName>BusinessLogicandProcessAutomation</fullName>
                <default>true</default>
                <label>Business Logic and Process Automation: 28%</label>
            </value>
            <value>
                <fullName>UserInterface</fullName>
                <label>User Interface: 17%</label>
            </value>
            <value>
                <fullName>AppDeployment</fullName>
                <label>App Deployment: 10%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>